[project]
name = "sdss-lvmecp"
version = "1.3.0"
description = "A library and actor to communicate with an SDSS-V LVM Enclosure"
authors = [
    { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" },
    { name = "mingyeong yang", email = "mingyeong@khu.ac.kr"}
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.11,<4"

dependencies = [
    "sdsstools>=1.9.1",
    "sdss-clu>=2.4.3",
    "click-default-group>=1.2.2",
    "pyserial-asyncio>=0.6",
    "pymodbus>=3.6.0,<3.7",
    "lvmopstools[ephemeris,slack]>=0.5.2",
]

[project.urls]
Homepage = "https://github.com/sdss/lvmecp"
Repository = "https://github.com/sdss/lvmecp"
Documentation = "https://sdss-lvmecp.readthedocs.org"

[project.scripts]
lvmecp = "lvmecp.__main__:main"

[dependency-groups]
dev = [
    "ipython>=7.11.0",
    "doc8>=0.8.0",
    "ipdb>=0.12.3",
    "rstcheck>=3.3.1",
    "ruff>=0.4.0",
    "pytest>=5.2.2",
    "pytest-asyncio>=0.10.0",
    "pytest-cov>=2.8.1",
    "pytest-mock>=1.13.0",
    "pytest-sugar>=0.9.2",
    "coverage[toml]>=5.0",
    "Sphinx>=4.1.2",
    "sphinx-jsonschema>=1.16.7",
    "myst-parser>=0.14.0",
    "furo>=2024.4.4",
    "nox>=2021.6.12",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-copybutton>=0.3.3",
    "sphinx-click>=3.0.1",
    "pytest-timeout>=2.3.1",
]

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["lvmecp"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu"]

[tool.pytest.ini_options]
addopts = "--cov lvmecp --cov-report xml --cov-report html --cov-report term"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 10

[tool.coverage.run]
branch = true
omit = [
    "python/lvmecp/__main__.py",
    "python/lvmecp/simulator.py",
    "python/lvmecp/tools.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["python/lvmecp"]

[tool.hatch.build.targets.wheel]
packages = ["python/lvmecp"]
